# adventofcode

./: README.md  comp.py  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d12.py  d13.py  d14.py  d16.py  d17.py  d18.py  d20.py  day2_1.cpp  day2_2.cpp  day3_1.cpp
2018/: README.md  d01.cpp  d02.cpp  d03.cpp  d04.cpp  package.json  pnpm-lock.yaml  tsconfig.json
2018/src/: 01.ts  01_input.ts
2018/src/helpers/: index.ts  split.ts  stringToNumber.ts
2019/: .gitignore  01.cc  01.cpp  02.cc  02.cpp  03.cc  03.cpp  04.cc  04.cpp  05.cc  05.cpp  06.cc  06.cpp  07.cc  08.cc  08.cpp  09.cc  09.cpp  10.cc  11.cc  12.cc  13.cc  14.cc  15.cc  16.cc  CMakeLists.txt  Makefile  README.md  aoc.cpp  aoc.h  d01.py  d02.py  d03.py  d07.py  d08.py  d10.py  d11.py  d12.py  d13.py  d15.py  (+29 more)
2019/data_structures/: complex.cc  complex.h
2019/int_code_comp/: int_code_comp.cc  int_code_comp.h
2019/python/: README.md  comp.py  d04.py  d11.py  d14.py  d15.py  d18.py
2019/utils/: utils.cc  utils.h
2020/: .gitignore  README.md  aoc-2020.ipynb  aocd-2020.ipynb  d01.cpp  d01.py  d02.cpp  d02.py  d03.cpp  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d21.py  d22.py  d23.py  d24.py  pyproject.toml
2020/python/: aocd-2020.ipynb  pyproject.toml
2021/: 02.sh  03.sh  04.sh  05.sh  07.sh  README.md  common.sh  d01.sh  d02.sh  d03.sh  d03_old.sh  d04.sh  d06.sh  d08.py  d08.sh  d09.py  d14.py  d16.sh  d17.sh
2021/python/: d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py
2022/: 01.py  01.ts  02.ts  03.ts  04.ts  05.py  06.ts  07.ts  08.py  09.py  10.py  11.py  11.ts  12.py  13.py  14.py  14_2.py  15.py  16.cpp  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  README.md  base.py  errors.ts  helpers.ts  package.json  pnpm-lock.yaml  shared.ts
2022/inputs/: 06.txt  15.txt  21.txt
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  helpers.py
2023/01/: .gitignore
2023/01/src/main/scala/: Main.scala
2024/: README.md  go.mod
2024/01/: 01.go  main.go
2024/02/: 02.go  main.go
2024/03/: 03.go  main.go
2024/04/: main.go
2024/05/: input.txt  main.go
2024/06/: main.go
2024/07/: main.go
2024/08/: main.go
2024/09/: input.txt  main.go
2024/10/: main.go
2024/11/: main.go
2024/utils/: main.go
cpp_sols/: d1_1.cpp  d1_2.cpp  d2_1.cpp  d2_2.cpp
day1/: day1_1.cpp  day1_2.cpp
day3/: day3_1.py  day3_2.py
intcodecomp/: comp.py
