cmake_minimum_required(VERSION 3.17)
project(2019)

set(CMAKE_CXX_STANDARD 14)

add_executable(2019
        aoc.cpp
        aoc.h
        day01.cpp
        day02.cpp
        day03.cpp
        day04.cpp
        day05.cpp
        day06.cpp
        day07.cpp
        day08.cpp
        day09.cpp
        dsalgos.cpp
        dsalgos.h)
